gui: Use SlotsViewModel to retrieve current slot box positions, fix bugs